--- a/UNDP-case-study.html
+++ b/UNDP-case-study.html
@@ -79,7 +79,7 @@
 
             
             <div class="research-image">
-            <img src="img/undp/usecases.png" alt="collective intelligence use cases"></img>
+            <img src="img/undp/usecases.jpg" alt="collective intelligence use cases"></img>
             <p class="caption">Six Use Cases for Collective Intelligence Design. <a href="https://www.undp.org/sites/g/files/zskgke326/files/migration/acceleratorlabs/UNDP-Accelerator_Labs_Nesta_Main_deck-FINAL.pdf" target="_blank">Image UNDP/Nesta</a></p>
             </div>
 
