updating contact again

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
       <section class="page-section">
         <div class="text-wrap">
             <h1>Get in touch</h1>
-            <p>If you would like to get in touch to talk about work opportunities or collaborations relating to how we can better people and the planet or just to have a friendly chat please feel free to schedule some time via <a href="https://www.linkedin.com/in/naoise-boyle/" class="contact" target="_blank">calendly</a> or send me a message via <a href="X" class="contact" target="_blank">linkedin.</a> </p>
+            <p>If you would like to get in touch to talk about work opportunities or collaborations relating to how we can better people and the planet or just to have a friendly chat please feel free to schedule some time via <a href="https://calendly.com/coform/meeting" class="contact" target="_blank">calendly</a> or send me a message via <a href="https://www.linkedin.com/in/naoise-boyle/" class="contact" target="_blank">linkedin.</a> </p>
             <br>
             <p><img src="img/linkedin.svg"/> <a href="https://www.linkedin.com/in/naoise-boyle/" target="_blank" >Connect with me on Linkedin</a><br><img src="img/twitter.svg" /> <a href="https://www.twitter.com/naoise_b" target="_blank" > Follow me on twitter</a><br><img src="img/medium.svg" /> <a href="https://www.twitter.com/naoise_b" target="_blank" > Check out my Medium</a></p>
           </div>
