--- a/public/cambodia.html
+++ b/public/cambodia.html
@@ -44,7 +44,7 @@
            <p class="project-description">Working with UNDP Cambodia to enable communities to have a voice in the delivery of public services, creating grassroots mechanisms for improved communication between government and the people.</p>
              <p class="tag">Nesta for UNDP Cambodia</p>
 
-            <img class="editorial" src="img/cambodia/cambodia-hero.jpg" alt="user focus group" style="margin-bottom:-20%;"></img>
+            <img class="editorial" src="img/Cambodia/cambodia-hero.jpg" alt="user focus group" style="margin-bottom:-20%;"></img>
       </div>
     </div>
     </section>
@@ -61,7 +61,7 @@
             <h2>Our Theory of Change: Developing a culture of feedback and participation</h2>
 
             <div class="research-image">
-            <img src="img/cambodia/toc.png" alt="theory of change"></img>
+            <img src="img/Cambodia/toc.png" alt="theory of change"></img>
             </div>
 
             <h2>Our Approach</h2>
@@ -69,7 +69,7 @@
             <p>Basing our approach on<a href="https://www.gov.uk/service-manual/service-standard" target="_blank"> the government service standard</a>, we designed and implemented the service over 10 months. Our approach included conducting an in-depth discovery into current social accountability initiatives and community needs, prototyping new service models, and finally launching the service to 3 regions within Cambodia reaching over 260,000 people.</p> 
 
              <div class="research-image">
-            <img src="img/cambodia/cambodia-process.png" alt="process"></img>
+            <img src="img/Cambodia/Cambodia-process.png" alt="process"></img>
             </div>
 
 
@@ -113,7 +113,7 @@
 
 
            <div class="research-image">
-             <img src="img/cambodia/graph-2.jpg" alt="gov literacy scale"></img>
+             <img src="img/Cambodia/graph-2.jpg" alt="gov literacy scale"></img>
                <p class="caption">Using the UK government digital literacy scale we scored citizens technical literacy and likelihood to adopt online services.</p>
             </div>
 
@@ -139,7 +139,7 @@
 
 
              <div class="research-image">
-              <img src="img/cambodia/cambodia-testing.jpg" alt="community testing session"></img>
+              <img src="img/Cambodia/cambodia-testing.jpg" alt="community testing session"></img>
                  <p class="caption">Community testing session during the Alpha Phase</p>
              </div>
 
@@ -160,7 +160,7 @@
 
 
               <div class="research-image">
-                <img src="img/cambodia/cambodia-blueprint.jpeg" alt="service blueprint"></img>
+                <img src="img/Cambodia/cambodia-blueprint.jpeg" alt="service blueprint"></img>
                  <p class="caption">Service Blueprint tested during the Alpha Phase</p>
                </div>
 
@@ -178,7 +178,7 @@
 
 
                 <div class="research-image">
-                <img src="img/cambodia/cambodia-graph.png" alt="user enegagement by gender"></img>
+                <img src="img/Cambodia/cambodia-graph.png" alt="user enegagement by gender"></img>
                  <p class="caption">Snapshot of visitors to the service feedback platform during Beta testing</p>
                </div>
 
