--- a/public/mhclg.html
+++ b/public/mhclg.html
@@ -44,7 +44,7 @@
            <p class="project-description">Partnering with MHCLG to transform digital planning, focusing on better national consistency, open data and clear standards.</p>
              <p class="tag">FutureGov for MHCLG</p>
 
-            <img class="editorial" src="img/mhclg/mhclg-hero.jpg" alt="user focus group" style="margin-bottom:-20%;"></img>
+            <img class="editorial" src="img/MHCLG/mhclg-hero.jpg" alt="user focus group" style="margin-bottom:-20%;"></img>
       </div>
     </div>
     </section>
@@ -87,7 +87,7 @@
               <p> <span style="font-weight:500;">Planning Process:</span> To understand areas of improvement in the current planning process we ran workshops with local authorities to map the current process. From doing this with a range of different authorities (urban, rural) we learned that the planning process in its current form is highly variational and dependent on the planning management styles of the local authority. For processes to be locally contextual and both interoperable there needs to be a balance of standardisation in process and workflows and autonomy to meet the locally specific needs of each authority. Building upon this, the variation and complexity in process often makes it difficult for third parties such as the planning inspectorate, property developers and other stakeholders to engage with local plans quickly and understand how they can integrate their own needs into the process.</p>
 
               <div class="research-image">
-                <img src="img/mhclg/mhclg-service-analysis.png" alt="service blueprint"></img>
+                <img src="img/MHCLG/mhclg-service-analysis.png" alt="service blueprint"></img>
                  <p class="caption">Mapping the current planning process and pain points with participating LPAs</p>
               </div>
 
@@ -159,7 +159,7 @@
 
 
               <div class="research-image">
-                <img src="img/mhclg/prototype.jpg" alt="alpha planning platform"></img>
+                <img src="img/MHCLG/prototype.jpg" alt="alpha planning platform"></img>
                  <p class="caption">Digital Platform created of the new planning platform and data standard</p>
               </div>
 
