--- a/public/radical-spaces-lab.html
+++ b/public/radical-spaces-lab.html
@@ -42,7 +42,7 @@
             <h1>Radical Civic Design: Creating experimental spaces to explore possible alternatives</h1>
            <p class="project-description">Working with communities to codesign and speculate societal transistions that solve wicked problems</p>
 
-            <img class="editorial" src="img/rsl/rsl-hero.jpeg" alt="rsl workshop" style="margin-bottom:-20%;"></img>
+            <img class="editorial" src="img/RSL/rsl-hero.jpeg" alt="rsl workshop" style="margin-bottom:-20%;"></img>
       </div>
     </div>
     </section>
@@ -80,7 +80,7 @@
 
 
             <div class="research-image">
-              <img src="img/rsl/workshop-03.jpeg" alt="community workshop"></img>
+              <img src="img/RSL/workshop-03.jpeg" alt="community workshop"></img>
               <p class="caption">Participants explore the dimensions of scenarios in participatory sessions</p>
             </div>
 
@@ -88,13 +88,13 @@
 
 
             <div class="research-image">
-              <img src="img/rsl/rsl-workshop-02.jpeg" alt="systems map"></img>
+              <img src="img/RSL/rsl-workshop-02.jpeg" alt="systems map"></img>
               <p class="caption">Systems map speculating a political ecology around plant based information systems.</p>
             </div>
 
 
             <div class="research-image">
-              <img src="img/rsl/rsl-workshop-01.jpeg" alt="specualtive object"></img>
+              <img src="img/RSL/rsl-workshop-01.jpeg" alt="specualtive object"></img>
               <p class="caption">Speculative objective designed as part of exploring food systems.</p>
             </div>
 
